--- a/src/Frontend/otp.html
+++ b/src/Frontend/otp.html
@@ -30,11 +30,11 @@
 
             0%,
             100% {
-                box-shadow: 0 0 0 0 rgba(168, 85, 247, 0.7);
+                box-shadow: 0 0 0 0 rgba(173, 48, 41, 0.6);
             }
 
             50% {
-                box-shadow: 0 0 0 10px rgba(168, 85, 247, 0);
+                box-shadow: 0 0 0 10px rgba(173, 48, 41, 0);
             }
         }
 
@@ -45,67 +45,68 @@
 </head>
 
 <body
-    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-purple-400 via-purple-300 to-purple-500 overflow-hidden">
+    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-[#FEEFCD] via-[#F8E8D0] to-[#AD3029]/20 overflow-hidden">
 
     <!-- Animated blobs -->
     <div
-        class="absolute w-96 h-96 bg-purple-600/30 rounded-full blur-3xl top-[-100px] left-[-100px] animate-[blob_20s_infinite]">
+        class="absolute w-96 h-96 bg-[#AD3029]/25 rounded-full blur-3xl top-[-100px] left-[-100px] animate-[blob_20s_infinite]">
     </div>
     <div
-        class="absolute w-96 h-96 bg-pink-400/30 rounded-full blur-3xl bottom-[-100px] right-[-100px] animate-[blob_25s_infinite]">
+        class="absolute w-96 h-96 bg-[#AD3029]/20 rounded-full blur-3xl bottom-[-100px] right-[-100px] animate-[blob_25s_infinite]">
     </div>
 
-    <div class="relative z-10 w-full max-w-md bg-white/30 backdrop-blur-xl rounded-3xl shadow-2xl p-12">
+    <div class="relative z-10 w-full max-w-md bg-white/60 backdrop-blur-xl rounded-3xl shadow-2xl p-12">
 
         <div class="text-center mb-8">
-            <h2 class="text-3xl font-extrabold text-purple-700 mb-2">ShoppeClone</h2>
+            <h2 class="text-3xl font-extrabold text-[#AD3029] mb-2">ShoppeClone</h2>
             <h3 class="text-xl font-semibold text-gray-800 mb-2">Verify your email</h3>
             <p class="text-gray-600">Enter the 6-digit code sent to your email</p>
         </div>
 
         <!-- Countdown timer -->
-        <div class="text-center mb-8 p-4 bg-white/50 rounded-2xl">
-            <div id="countdown" class="text-lg font-semibold text-purple-700 mb-1">02:00</div>
-            <p class="text-sm text-gray-600">Didn't receive code? <span id="resendLink"
-                    class="text-purple-600 hover:underline font-medium cursor-pointer pointer-events-none text-gray-400">Resend</span>
+        <div class="text-center mb-8 p-4 bg-[#FEEFCD] border-2 border-[#AD3029] rounded-2xl">
+            <div id="countdown" class="text-lg font-semibold text-[#AD3029] mb-1">00:30</div>
+            <p class="text-sm text-gray-600">
+                Didn't receive code?
+                <span id="resendLink" class="text-gray-400 font-medium cursor-pointer pointer-events-none">
+                    Resend
+                </span>
             </p>
         </div>
 
         <form id="otpForm">
             <!-- OTP Input Fields -->
             <div class="flex gap-3 justify-center mb-8">
-                <input id="otp1" maxlength="1" required
-                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                    type="text">
-                <input id="otp2" maxlength="1" required
-                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                    type="text">
-                <input id="otp3" maxlength="1" required
-                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                    type="text">
-                <input id="otp4" maxlength="1" required
-                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                    type="text">
-                <input id="otp5" maxlength="1" required
-                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                    type="text">
-                <input id="otp6" maxlength="1" required
-                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-purple-200 focus:border-purple-600 focus:outline-none shadow-lg"
-                    type="text">
+                <input id="otp1" maxlength="1" required type="text"
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none shadow-lg">
+                <input id="otp2" maxlength="1" required type="text"
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none shadow-lg">
+                <input id="otp3" maxlength="1" required type="text"
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none shadow-lg">
+                <input id="otp4" maxlength="1" required type="text"
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none shadow-lg">
+                <input id="otp5" maxlength="1" required type="text"
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none shadow-lg">
+                <input id="otp6" maxlength="1" required type="text"
+                    class="otp-input w-16 h-16 text-2xl font-bold text-center bg-white rounded-2xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none shadow-lg">
             </div>
 
             <!-- Verify Button -->
             <button type="submit"
-                class="w-full py-4 rounded-full bg-gradient-to-r from-purple-600 to-purple-500 text-white font-semibold text-lg shadow-xl hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-200 mb-6">
+                class="w-full py-4 rounded-full bg-gradient-to-r from-[#AD3029] to-[#CD5252] text-white font-semibold text-lg shadow-xl hover:opacity-90 hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-200 mb-6">
                 Verify Code
             </button>
         </form>
 
         <!-- Back to login -->
         <p class="text-center text-sm text-gray-700">
-            Wrong email? <a href="/login.html" class="text-purple-700 font-semibold hover:underline">Sign in instead</a>
+            Wrong email?
+            <a href="/login.html" class="text-[#AD3029] font-semibold hover:underline">
+                Sign in instead
+            </a>
         </p>
     </div>
+
 
     <script>
         // Verify OTP
@@ -196,7 +197,7 @@
         });
 
         // Timer Logic
-        let timeLeft = 120; // 2 minutes
+        let timeLeft = 30; // 30 seconds
         let timerInterval;
 
         function updateTimerDisplay() {
@@ -210,19 +211,27 @@
         function startTimer() {
             if (timerInterval) clearInterval(timerInterval);
 
-            timeLeft = 120;
+            timeLeft = 30;
             updateTimerDisplay();
+
+            // Ensure disabled state initially
+            const resendLink = document.getElementById('resendLink');
+            if (resendLink) {
+                resendLink.classList.add('pointer-events-none', 'text-gray-400');
+                resendLink.classList.remove('text-[#AD3029]', 'cursor-pointer', 'underline');
+                resendLink.innerText = "Resend";
+            }
 
             timerInterval = setInterval(() => {
                 if (timeLeft <= 0) {
                     clearInterval(timerInterval);
                     updateTimerDisplay(); // Show 00:00
 
-                    const resendLink = document.getElementById('resendLink');
                     if (resendLink) {
                         resendLink.classList.remove('pointer-events-none', 'text-gray-400');
-                        resendLink.classList.add('text-purple-600', 'cursor-pointer');
+                        resendLink.classList.add('text-[#AD3029]', 'cursor-pointer', 'underline');
                         resendLink.onclick = resendOTP;
+                        resendLink.innerText = "Resend";
                     }
                     return;
                 }
@@ -244,12 +253,17 @@
                 // Disable link again
                 const resendLink = document.getElementById('resendLink');
                 resendLink.classList.add('pointer-events-none', 'text-gray-400');
-                resendLink.classList.remove('text-purple-600', 'cursor-pointer');
+                resendLink.classList.remove('text-[#AD3029]', 'cursor-pointer', 'underline');
+                resendLink.innerText = "Sending...";
 
                 const email = localStorage.getItem('pendingEmail');
-                const response = await fetch('http://localhost:8080/api/auth/send-otp', { // Using send-otp for resend is fine if user exists
-                    // But wait, if user is not active, send-otp might fail?
-                    // Verify logic later.
+                if (!email) {
+                    alert('❌ Session expired. Please register again.');
+                    window.location.href = 'register.html';
+                    return;
+                }
+
+                const response = await fetch('http://localhost:8080/api/auth/send-otp', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email })
@@ -257,19 +271,85 @@
 
                 if (response.ok) {
                     alert('✅ New OTP sent!');
-                    timeLeft = 120;
+                    resendLink.innerText = "Resend"; // Reset text
+                    timeLeft = 30;
                     startTimer();
                 } else {
                     const data = await response.json();
                     alert('❌ ' + (data.message || 'Failed to resend'));
-                    // Re-enable if failed
+                    // Re-enable if failed but keep red if allow retry? No, retry timer logic handles it.
+                    // But if fetch failed, we should probably allow retry immediately?
+                    // For now, let's keep it consistent: error -> button stays disabled? No, re-enable.
                     resendLink.classList.remove('pointer-events-none', 'text-gray-400');
+                    resendLink.classList.add('text-[#AD3029]', 'cursor-pointer', 'underline');
+                    resendLink.innerText = "Resend";
                 }
             } catch (error) {
                 console.error(error);
                 alert('❌ Connection error');
+                // Re-enable if failed
+                const resendLink = document.getElementById('resendLink');
+                resendLink.classList.remove('pointer-events-none', 'text-gray-400');
+                resendLink.classList.add('text-[#AD3029]', 'cursor-pointer', 'underline');
+                resendLink.innerText = "Resend";
             }
         }
+
+        // Auto-focus Logic
+        const otpInputs = document.querySelectorAll('.otp-input');
+
+        otpInputs.forEach((input, index) => {
+            // Handle Input (Type number & Move Next)
+            input.addEventListener('input', (e) => {
+                const value = e.target.value;
+
+                // Allow only numbers
+                if (!/^\d*$/.test(value)) {
+                    e.target.value = value.replace(/\D/g, '');
+                    return;
+                }
+
+                if (value.length >= 1) {
+                    if (index < otpInputs.length - 1) {
+                        otpInputs[index + 1].focus();
+                    }
+                }
+            });
+
+            // Handle Keydown (Backspace & Arrows)
+            input.addEventListener('keydown', (e) => {
+                if (e.key === 'Backspace') {
+                    if (input.value === '' && index > 0) {
+                        otpInputs[index - 1].focus();
+                    }
+                } else if (e.key === 'ArrowLeft' && index > 0) {
+                    otpInputs[index - 1].focus();
+                } else if (e.key === 'ArrowRight' && index < otpInputs.length - 1) {
+                    otpInputs[index + 1].focus();
+                }
+            });
+
+            // Handle Paste (Paste full code)
+            input.addEventListener('paste', (e) => {
+                const paste = (e.clipboardData || window.clipboardData).getData('text');
+                // Only digits
+                if (!/^\d+$/.test(paste)) return;
+
+                e.preventDefault();
+                const digits = paste.split('');
+                otpInputs.forEach((inp, idx) => {
+                    if (digits[idx]) {
+                        inp.value = digits[idx];
+                    }
+                });
+
+                // Focus on last filled or last input
+                const focusIdx = Math.min(digits.length, otpInputs.length) - 1;
+                if (focusIdx >= 0 && focusIdx < otpInputs.length) {
+                    otpInputs[focusIdx].focus();
+                }
+            });
+        });
 
         // Auto start timer
         // startTimer() called in DOMContentLoaded above
