--- a/src/Frontend/forgot-password.html
+++ b/src/Frontend/forgot-password.html
@@ -29,47 +29,45 @@
 </head>
 
 <body
-    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-purple-400 via-purple-300 to-purple-500 overflow-hidden">
+    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-[#FEEFCD] via-[#F8E8D0] to-[#AD3029]/20 overflow-hidden">
 
     <!-- Blobs -->
     <div
-        class="absolute w-96 h-96 bg-purple-600/30 rounded-full blur-3xl top-[-100px] left-[-100px] animate-[blob_20s_infinite]">
+        class="absolute w-96 h-96 bg-[#AD3029]/25 rounded-full blur-3xl top-[-100px] left-[-100px] animate-[blob_20s_infinite]">
     </div>
     <div
-        class="absolute w-96 h-96 bg-pink-400/30 rounded-full blur-3xl bottom-[-100px] right-[-100px] animate-[blob_25s_infinite]">
+        class="absolute w-96 h-96 bg-[#AD3029]/20 rounded-full blur-3xl bottom-[-100px] right-[-100px] animate-[blob_25s_infinite]">
     </div>
 
-    <div class="relative z-10 w-full max-w-md bg-white/30 backdrop-blur-xl rounded-3xl shadow-2xl p-12">
+    <div class="relative z-10 w-full max-w-md bg-white/60 backdrop-blur-xl rounded-3xl shadow-2xl p-12">
 
         <div class="text-center mb-8">
-            <h2 class="text-3xl font-extrabold text-purple-700 mb-2">ShoppeClone</h2>
+            <h2 class="text-3xl font-extrabold text-[#AD3029] mb-2">ShoppeClone</h2>
             <h3 class="text-xl font-semibold text-gray-800 mb-2">Forgot Password?</h3>
             <p class="text-gray-600">Enter email to receive OTP code</p>
         </div>
 
-        <!-- Step 1: Email Input -->
+        <!-- Step 1 -->
         <div id="step1">
             <form id="emailForm" class="space-y-6">
-                <div>
-                    <input type="email" id="email" required
-                        class="w-full px-4 py-3 rounded-xl border-2 border-gray-200 focus:border-purple-500 focus:outline-none"
-                        placeholder="Your email">
-                </div>
+                <input type="email" id="email" required
+                    class="w-full px-4 py-3 rounded-xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none bg-transparent"
+                    placeholder="Your email">
 
                 <button type="submit"
-                    class="w-full py-4 rounded-full bg-gradient-to-r from-purple-600 to-purple-500 text-white font-semibold text-lg shadow-xl hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-200">
+                    class="w-full py-4 rounded-full bg-gradient-to-r from-[#AD3029] to-[#CD5252] text-white font-semibold text-lg shadow-xl hover:opacity-90 transition-all duration-200">
                     Send OTP Code
                 </button>
             </form>
         </div>
 
-        <!-- Step 2: OTP + New Password -->
+        <!-- Step 2 -->
         <div id="step2" class="hidden space-y-6">
-            <div class="bg-green-100 border-2 border-green-500 rounded-xl p-4 mb-4">
-                <p class="text-green-700 font-semibold text-center">
+            <div class="bg-[#FEEFCD] border-2 border-[#AD3029] rounded-xl p-4 mb-4">
+                <p class="text-[#AD3029] font-semibold text-center">
                     ✅ OTP code has been sent to your email!
                 </p>
-                <p class="text-green-600 text-sm text-center mt-2">
+                <p class="text-gray-600 text-sm text-center mt-2">
                     Please check your email inbox
                 </p>
             </div>
@@ -78,17 +76,17 @@
                 <div>
                     <label class="text-sm font-medium text-gray-700">OTP Code (6 digits)</label>
                     <input type="text" id="otp" required maxlength="6" pattern="[0-9]{6}"
-                        class="w-full mt-1 px-4 py-3 rounded-xl border-2 border-gray-200 focus:border-purple-500 focus:outline-none text-center text-2xl tracking-widest"
+                        class="w-full mt-1 px-4 py-3 rounded-xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none text-center text-2xl tracking-widest bg-transparent"
                         placeholder="000000">
                 </div>
 
                 <div class="relative">
                     <label class="text-sm font-medium text-gray-700">New Password</label>
                     <input type="password" id="newPassword" required minlength="6"
-                        class="w-full mt-1 px-4 py-3 pr-12 rounded-xl border-2 border-gray-200 focus:border-purple-500 focus:outline-none"
-                        placeholder="Minimum 6 characters">
+                        class="w-full mt-1 px-4 py-3 pr-12 rounded-xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none bg-transparent"
+                        placeholder="Minimum 8 characters">
                     <button type="button" onclick="togglePassword('newPassword')"
-                        class="absolute right-4 bottom-3 text-gray-500 hover:text-gray-700">
+                        class="absolute right-4 bottom-3 text-gray-500 hover:text-[#AD3029]">
                         <i class="fas fa-eye"></i>
                     </button>
                 </div>
@@ -107,15 +105,15 @@
                 <div class="relative">
                     <label class="text-sm font-medium text-gray-700">Confirm New Password</label>
                     <input type="password" id="confirmPassword" required
-                        class="w-full mt-1 px-4 py-3 pr-12 rounded-xl border-2 border-gray-200 focus:border-purple-500 focus:outline-none">
+                        class="w-full mt-1 px-4 py-3 pr-12 rounded-xl border-2 border-gray-300 focus:border-[#AD3029] focus:outline-none bg-transparent">
                     <button type="button" onclick="togglePassword('confirmPassword')"
-                        class="absolute right-4 bottom-3 text-gray-500 hover:text-gray-700">
+                        class="absolute right-4 bottom-3 text-gray-500 hover:text-[#AD3029]">
                         <i class="fas fa-eye"></i>
                     </button>
                 </div>
 
                 <button type="submit"
-                    class="w-full py-4 rounded-full bg-gradient-to-r from-purple-600 to-purple-500 text-white font-semibold text-lg shadow-xl hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-200">
+                    class="w-full py-4 rounded-full bg-gradient-to-r from-[#AD3029] to-[#CD5252] text-white font-semibold text-lg shadow-xl hover:opacity-90 transition-all duration-200">
                     Reset Password
                 </button>
             </form>
@@ -123,9 +121,10 @@
 
         <p class="text-center text-sm text-gray-700 mt-6">
             Remember your password?
-            <a href="/login.html" class="text-purple-700 font-semibold hover:underline">Login</a>
+            <a href="/login.html" class="text-[#AD3029] font-semibold hover:underline">
+                Login
+            </a>
         </p>
-
     </div>
 
     <script>
