--- a/src/Frontend/login.html
+++ b/src/Frontend/login.html
@@ -29,23 +29,23 @@
 </head>
 
 <body
-    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-purple-400 via-purple-300 to-purple-500 overflow-hidden">
+    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-[#FEEFCD] via-[#F8E8D0] to-[#AD3029]/20 overflow-hidden">
 
     <!-- blobs -->
     <div
-        class="absolute w-96 h-96 bg-purple-600/30 rounded-full blur-3xl top-[-100px] left-[-100px] animate-[blob_20s_infinite]">
+        class="absolute w-96 h-96 bg-[#AD3029]/25 rounded-full blur-3xl top-[-120px] left-[-120px] animate-[blob_20s_infinite]">
     </div>
     <div
-        class="absolute w-96 h-96 bg-pink-400/30 rounded-full blur-3xl bottom-[-100px] right-[-100px] animate-[blob_25s_infinite]">
+        class="absolute w-96 h-96 bg-[#AD3029]/20 rounded-full blur-3xl bottom-[-120px] right-[-120px] animate-[blob_25s_infinite]">
     </div>
 
     <div
-        class="relative z-10 w-full max-w-5xl bg-white/30 backdrop-blur-xl rounded-3xl shadow-2xl flex overflow-hidden">
+        class="relative z-10 w-full max-w-5xl bg-white/60 backdrop-blur-xl rounded-3xl shadow-2xl flex overflow-hidden">
 
         <!-- LEFT LOGIN FORM -->
         <div class="w-1/2 p-12">
-            <h2 class="text-3xl font-extrabold text-purple-700">
-                ShoppeClone
+            <h2 class="text-3xl font-extrabold text-[#AD3029]">
+                ShopeeClone
             </h2>
 
             <h3 class="text-xl font-semibold text-gray-800 mt-6">
@@ -56,31 +56,33 @@
             </p>
 
             <input id="loginEmail" placeholder="Email"
-                class="w-full mb-5 bg-transparent border-b-2 border-gray-400 focus:border-purple-600 outline-none py-2">
+                class="w-full mb-5 bg-transparent border-b-2 border-gray-400 focus:border-[#AD3029] outline-none py-2">
+
             <input id="loginPassword" type="password" placeholder="Password"
-                class="w-full mb-3 bg-transparent border-b-2 border-gray-400 focus:border-purple-600 outline-none py-2">
+                class="w-full mb-3 bg-transparent border-b-2 border-gray-400 focus:border-[#AD3029] outline-none py-2">
 
             <div class="text-right mb-6">
-                <a href="/forgot-password.html" class="text-sm text-purple-700 hover:underline">
+                <a href="/forgot-password.html" class="text-sm text-[#AD3029] hover:underline">
                     Forgot password?
                 </a>
             </div>
 
             <button onclick="signIn()"
-                class="w-full py-3 rounded-full bg-gradient-to-r from-purple-600 to-purple-500 text-white font-semibold shadow-lg">
+                class="w-full py-3 rounded-full bg-gradient-to-r from-[#AD3029] to-[#CD5252] text-white font-semibold shadow-lg hover:opacity-90 transition">
                 Sign In
             </button>
 
             <div class="flex items-center my-6">
-                <div class="flex-1 h-px bg-gray-400"></div>
+                <div class="flex-1 h-px bg-gray-300"></div>
                 <span class="mx-4 text-sm text-gray-600">or</span>
-                <div class="flex-1 h-px bg-gray-400"></div>
+                <div class="flex-1 h-px bg-gray-300"></div>
             </div>
 
-            <!-- GOOGLE BUTTON - WORKING -->
+            <!-- GOOGLE BUTTON -->
             <a href="#" onclick="googleLogin(event)" style="text-decoration: none;">
-                <button
-                    class="w-full flex items-center justify-center gap-3 py-3 rounded-full bg-white shadow hover:bg-gray-100 transition">
+                <button class="w-full flex items-center justify-center gap-3 py-3 rounded-full 
+       bg-[#FEEFCD] border-2 border-[#AD3029] 
+       shadow hover:bg-[#F8E8D0] hover:shadow-md transition">
                     <svg class="w-5 h-5" viewBox="0 0 48 48">
                         <path fill="#EA4335"
                             d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.73 17.74 9.5 24 9.5z" />
@@ -99,7 +101,7 @@
 
             <p class="text-center text-sm text-gray-700 mt-6">
                 Don't have an account?
-                <a href="/register.html" class="text-purple-700 font-semibold hover:underline">
+                <a href="/register.html" class="text-[#AD3029] font-semibold hover:underline">
                     Sign up
                 </a>
             </p>
@@ -108,20 +110,34 @@
         <!-- RIGHT IMAGE SLIDER -->
         <div class="w-1/2 relative overflow-hidden rounded-r-3xl">
             <div id="slider" class="w-full h-full relative">
-                <img src="https://i.pinimg.com/1200x/b5/11/c7/b511c71b1d06667a39a984162daa417b.jpg"
+                <img src="https://i.pinimg.com/736x/52/0d/38/520d389f4ccfb11a2e76b8ed9dfdb95a.jpg"
                     class="slide absolute inset-0 w-full h-full object-cover opacity-100 transition-opacity duration-1000">
-                <img src="https://i.pinimg.com/736x/dc/31/a7/dc31a73c195aa864c6c6d49d3feabbda.jpg"
+                <img src="https://i.pinimg.com/736x/64/79/9d/64799db8359714f06a02dc0fe4f82fe6.jpg"
                     class="slide absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000">
-                <img src="https://i.pinimg.com/736x/d6/53/04/d653040c29b3bac874684c851676932f.jpg"
+                <img src="https://i.pinimg.com/736x/40/82/60/408260ea7ea27aca4ba1052f2329977a.jpg"
                     class="slide absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000">
-                <img src="https://i.pinimg.com/1200x/40/30/95/403095ca081124fdd503a886ef5394d5.jpg"
+                <img src="https://i.pinimg.com/736x/0e/05/17/0e05179f699bf2a37166cdf104ad9f17.jpg"
                     class="slide absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000">
-                <img src="https://i.pinimg.com/736x/af/7b/29/af7b2996da9693de90da701266024229.jpg"
+                <img src="https://i.pinimg.com/736x/56/41/8b/56418bbdf3ce32c733ecb92a9ca2e349.jpg"
                     class="slide absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000">
             </div>
-            <div class="absolute inset-0 bg-purple-900/10"></div>
+
+            <script>
+                const slides = document.querySelectorAll("#slider .slide");
+                let currentSlide = 0;
+                const intervalTime = 3000; // ⏱ 3000ms = 3 giây (đổi số nếu muốn)
+
+                setInterval(() => {
+                    slides[currentSlide].style.opacity = 0;
+                    currentSlide = (currentSlide + 1) % slides.length;
+                    slides[currentSlide].style.opacity = 1;
+                }, intervalTime);
+            </script>
+            <div class="absolute inset-0 bg-[#AD3029]/10"></div>
         </div>
+
     </div>
+
 
     <script>
         async function signIn() {
